# fin-chat-bot

./: .gitignore  app.py  main.py  pyproject.toml
qdrant_storage/: raft_state.json
qdrant_storage/collections/fin-chat-bot/0/: applied_seq.json  newest_clocks.json
qdrant_storage/collections/fin-chat-bot/0/segments/4d8e5552-5142-4e05-ae57-b5b556848a72/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/fin-chat-bot/0/segments/57fd0451-9d34-4f4e-aadd-5e93e430637c/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/fin-chat-bot/0/segments/a05eb95b-86cd-4ae3-8875-9c4d9ac73481/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/fin-chat-bot/0/segments/c8d92f1f-270a-47dd-bc4a-8ef3c87dfc9d/: segment.json  (+2 more)
qdrant_storage/collections/fin-chat-bot/0/wal/: first-index
qdrant_storage/collections/test/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/test/0/wal/: first-index
qdrant_storage/collections/test_collection/0/: newest_clocks.json
qdrant_storage/collections/test_collection/0/wal/: first-index
src/benchmark/: analysis.ipynb
src/config/: settings.py
src/draft/: embedding_test.py
src/embedding/: embedding.py
src/llm_service/node/: knowledge_retrieval.py  metadata_extraction.py  query_translation.py  web_search.py
src/llm_service/pipeline/: graph.py  reasoning_graph.py
src/model/: embedding.py  model_config.yml  ocr.py
src/ocr/: ocr.py
src/vector_db/: qdrant.py  qdrant_backup.py  qdrant_setup.py
vector_db/: qdrant_setup.py
(+60 files in other folders)
