[project]
name = "gic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.68.0",
    "matplotlib>=3.10.8",
    "python-doctr>=1.0.1",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tavily-python>=0.7.23",
]
